--- a/hyperlink/me.html
+++ b/hyperlink/me.html
@@ -7,6 +7,9 @@
         <title></title>
     </head>
     <body>
+        <a href="../link2.html">link2</a>
+        <a href="../link2.html#bk_review">link2 리뷰보기</a>
+        <hr>
         <a href="./mainroom/laptop.jpg">노트북 찾기</a>
         지우개 찾기
         인형 찾기
